[package]
name = "lcd1602_gpio"
version = "0.1.0"
edition = "2021"
description = "Abstraction layer for interfacing between raspberry pi and the lcd1602 - 16x2 lcd display module through GPIO"
readme = "README.md"
license = "MIT"
exclude = ["imgs/"]
keywords = ["raspberry-pi", "gpio", "lcd", "embedded", "device-interface"]
categories = ["embedded", "hardware-support"]
repository = "https://github.com/t4skmanag3r/lcd1602_gpio"

[lib]
name = "lcd1602_gpio"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
rppal = "0.16.0"
